@@ -1,3 +1,8 @@
+11/13/2017
+- provided explicit control over whether the access token gets renewed
+  on expiry. If refresh fails, the user is redirected to the OP's
+  authorization endpoint.
+
 11/06/2017
 - added support for configurable network timeouts
 
